--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,13 @@
 	"postCreateCommand": "curl -L https://fly.io/install.sh | sh && echo 'export FLYCTL_INSTALL=\"/home/vscode/.fly\"' >> ~/.bashrc && echo 'export PATH=\"$FLYCTL_INSTALL/bin:$PATH\"' >> ~/.bashrc",
 
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Anthropic.claude-code"
+			]
+		}
+	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
