fix: lintワークフローの修正

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,10 @@ jobs:
       - uses: actions/setup-go@v6
         with:
           go-version: stable
+      - name: Install golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: latest
+          args: --version
       - name: Run make check (fmt-check and lint)
         run: make check
