--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,10 +19,9 @@ jobs:
       - uses: actions/setup-go@v6
         with:
           go-version: stable
-      - name: Install golangci-lint
+      - name: Run format check
+        run: make fmt-check
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: latest
-          args: --version
-      - name: Run make check (fmt-check and lint)
-        run: make check
